replaced hugging face with puter.js which is more lightweigth and fits this demo purpose

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,7 @@
   </head>
   <body>
     <app-root></app-root>
+    <!-- puter.js -->
+    <script src="https://js.puter.com/v2/"></script>
   </body>
 </html>
